--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kaibakker.github.io/pomodoro/build",
+  "homepage": "https://kaibakker.github.io/pomodoro",
   "devDependencies": {
     "react-scripts": "0.8.5"
   },
