--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kaibakker.github.io/pomodoro/build",
+  "homepage": "https://kaibakker.github.io/pomodoro",
   "devDependencies": {
     "react-scripts": "0.8.5"
   },
   "dependencies": {
-    "material-ui": "^0.16.7",
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -17,6 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
