--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "material-ui": "^0.17.0",
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-sortable-hoc": "^0.4.12"
+    "react-router": "^3.0.2",
+    "react-sortable-hoc": "^0.4.12",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
